books/python-programming/src/examples/basics/str_int.py

x = 2
y = "2"

print(x)
print(y)

print(x + 1)
print(y + 1)
